# gateway_enhancement_agent

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
config/: agent_self_tests.json  autonomous.json  competitor_research.json  competitors.json  components.json  delivery.json  email.json  gap_intelligence.json  local_llm.json  loop_policy.json  parallel_workers.json  role_lenses.json  sdlc_phases.json  security_guardrails.json  validation_gates.json
docs/: ARCHITECTURE_BEST_PRACTICES.md  DESIGN.md  DISCLAIMER.md  USAGE.md
scripts/: agent_env.sh  agent_status.sh  allocate_mac_permissions.sh  ensure_running.sh  fix_all_permissions.sh  install_health_alert.sh  install_local.sh  install_login_agent.sh  install_schedule.sh  install_weekly_email.sh  run_loop.sh  run_loop_launchd.sh  run_once.sh  scheduled_run.sh  setup_target_clone.sh  start_daemon.sh  stop_daemon.sh  uninstall_login_agent.sh  uninstall_schedule.sh
src/gateway_enhancement_agent/: __init__.py  __main__.py  agent_health.py  backlog.py  capability_coverage.py  cli.py  (+35 more)
tests/: __init__.py  conftest.py  llm_config_factory.py  test_agent_core.py  test_agent_health.py  test_backlog.py  test_capability_coverage.py  test_competitor_web_research.py  test_delivery.py  test_email_notifier.py  test_file_blocks.py  test_gap_intelligence.py  test_gap_models.py  test_git_automation.py  test_local_llm.py  test_parallel_orchestrator.py  test_patch_blocks.py  test_progress_log.py  test_prompt_budget.py  test_repo_access.py  test_sdlc_validate.py  test_security_guardrails.py  test_weekly_summary.py
(+4 files in other folders)
